--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
+<app-header></app-header>
 <div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <h3>I'm in the AppComponent</h3>
-      <hr>
-      <app-servers></app-servers>
-      <app-success-alert></app-success-alert>
-      <app-warning-alert></app-warning-alert>
+    <div class="row">
+        <div class="col-md-12">
+            <app-recipes></app-recipes>
+            <app-shopping-list></app-shopping-list>
+        </div>
     </div>
-  </div>
 </div>
